# bioinformathics

./: CMakeLists.txt  CreateTree.cpp  CreateTree.h  Data.cpp  Data.h  Node.cpp  Node.h  README.md  RedBlackTree.cpp  RedBlackTree.h  Test100Characters.h  WaveletNode.cpp  WaveletNode.h  anaplasma_phagocytophilum.cpp  anaplasma_phagocytophilum_256.cpp  color.h  escherichia_coli.cpp  example100.cpp  example10000.cpp  example100000.cpp  example1000000.cpp  example2000.cpp  example200000.cpp  example5000.cpp  example50000.cpp  example500000.cpp  main.cpp  salmonella_enterica_256.cpp  wNode.cpp  wNode.h  wTree.cpp  wTree.h
bacterias/: Anaplasma_phagocytophilum.GCA_000968465.1.30.dna.toplevel.fa
examples/: example100.txt  example1000.txt  example10000.txt  example100000.txt  example1000000.txt  example2000.txt  example200000.txt  example5000.txt  example50000.txt  example500000.txt
no_statistics_versions/: escherichia_coli_no_statistics.cpp  example10000_no_statistics.cpp
outputs/bacterias_outputs/: output_anaplasma.txt  output_anaplasma_256.txt  output_anaplasma_no_stat.txt  output_escherichia.txt  output_escherichia_256.txt  output_escherichia_no_stat.txt  output_salmonella.txt  output_salmonella_256.txt  output_salmonella_no_stats.txt  output_tuberculosis.txt  output_tuberculosis_256.txt  output_tuberculosis_no_stats.txt
outputs/example_outputs/: example1000000_2048.txt  example1000000_256.txt  example1000000_8.txt  example100000_2048.txt  example100000_256.txt  example100000_8.txt  example10000_2048.txt  example10000_256.txt  example10000_8.txt  example1000_2048.txt  (+36 more)
